# report

./: .dockerignore  .gitignore  README.md  pyproject.toml  taskfile.yml
.github/workflows/: ci-release-package.yml  ci-test.yml
notebooks/: anthropic.py  debug.py  docs-task-sync.py  miljø.py  test.py
src/report/type/: __init__.py  collection.py  element.py
src/report/type/dto/: __init__.py  normalized_rss_feed_document.py  rss_feed_item.py
src/report/type/node/: __init__.py  node.py  rss_feed.py  rss_feed_document.py
src/report/type/relation/: __init__.py  owns.py  relation.py
tests/report/type/: test_collection.py
tests/report/type/node/: test_node.py
tools/: Dockerfile  docker-compose.yml
